--- a/app/assets/stylesheets/webapp.css
+++ b/app/assets/stylesheets/webapp.css
@@ -12,6 +12,7 @@ div.wrapper {
 	height: 100%;
 	margin: 0 auto;
 	padding: 0;	
+	overflow-x: hidden;
 	}
 
 div.wr_feed {
